# rendering

./: CMakeLists.txt  README.MD
assets/fonts/Nova_Round/: OFL.txt
assets/log/: fps_shared_100tex_20250627T233245.csv  fps_shared_200tex_20250627T233421.csv  fps_shared_300tex_20250627T233707.csv  fps_single_100tex_20250627T232308.csv  fps_single_200tex_20250627T232427.csv  fps_single_300tex_20250627T232739.csv
assets/shaders/: shader.frag  shader.vert
scripts/: visualize_fps.py
src/: definitions.cpp  main.cpp
src/aif/: ImageFetcher.cpp  ImageFetcher.h
